@@ -36,25 +36,24 @@ Section "-un.gnupg2"
   Delete "$INSTDIR\gpg-agent.exe"
   Delete "$INSTDIR\scdaemon.exe"
   Delete "$INSTDIR\gpgconf.exe"
+  Delete "$INSTDIR\gpg-connect-agent.exe"
 
   Delete "$INSTDIR\pub\gpg2.exe"
   Delete "$INSTDIR\pub\gpgsm.exe"
+  Delete "$INSTDIR\pub\gpg-connect-agent.exe"
   RMDir "$INSTDIR\pub"
 
   Delete "$INSTDIR\gpg2keys_finger.exe"
   Delete "$INSTDIR\gpg2keys_hkp.exe"
   Delete "$INSTDIR\gpg2keys_curl.exe"
   Delete "$INSTDIR\gpg2keys_ldap.exe"
+  Delete "$INSTDIR\gpg-protect-tool.exe"
+  Delete "$INSTDIR\gpg-preset-passphrase.exe"
 
-#  Delete "$INSTDIR\share\gnupg\options.skel"
-#  Delete "$INSTDIR\share\gnupg\FAQ"
-#  Delete "$INSTDIR\share\gnupg\faq.html"
-#  Delete "$INSTDIR\share\gnupg\gpg.man"
-#  Delete "$INSTDIR\share\gnupg\gpgv.man"
-#  Delete "$INSTDIR\share\gnupg\gnupg.man"
-#  RMDir "$INSTDIR\share\gnupg"
-#  RMDir "$INSTDIR\share"
-   RMDir "$INSTDIR"
+  Delete "$INSTDIR\share\gnupg\qualified.txt"
+  Delete "$INSTDIR\share\gnupg\com-certs.txt"
+  Delete "$INSTDIR\share\gnupg\gpg-conf.skel"
+  RMDir "$INSTDIR\share\gnupg"
 
 #  Delete "$INSTDIR\gnupg.nls\de.mo"
 #  RMDir  "$INSTDIR\gnupg.nls"
